Fix function using xor operator when it should be using an and operator

BUG: 381511